Update JVMGCAndMemoryManagementStrategy.md